--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Calculate intra-class correlation coefficient from a fitted linear outcom
 Version: 0.1.0
 Date: 2019-07-02
 Authors@R: person("Tom", "Palmer", 
-  email = "tom.palmer@lancaster.ac.uk", 
+  email = "tom.palmer@bristol.ac.uk", 
   role = c("aut", "cre"), 
   comment = c(ORCID = "0000-0003-4655-4511"))
 Depends: R (>= 3.2.0)
