--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Authors@R: person("Tom", "Palmer",
 Depends: R (>= 3.2.0)
 Description: Calculate intra-class correlation coefficient from a multilevel model (fitted by the lme4 package).
 License: GPL-3
+Encoding: UTF-8
 Imports:
     boot,
     lme4
