--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -20,7 +20,7 @@ jobs:
         config:
           - {os: windows-latest, r: 'devel'}
           - {os: windows-latest, r: 'release'}
-          - {os: windows-latest, r: 'oldrel'}
+#          - {os: windows-latest, r: 'oldrel'}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
