--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
-Package: iccmlm
-Title: Calculate intra-class correlation coefficient from a fitted linear outcome multilevel model fitted by lme4
+Package: iccvpc
+Title: Intra-class correlation and variance partition coefficients 
+  for multilevel models
 Version: 0.1.0
 Authors@R: person("Tom", "Palmer", 
   email = "tom.palmer@bristol.ac.uk", 
   role = c("aut", "cre"), 
   comment = c(ORCID = "0000-0003-4655-4511"))
 Depends: R (>= 3.2.0)
-Description: Calculate intra-class correlation coefficient from a multilevel model (fitted by the lme4 package).
+Description: Calculate intra-class correlation coefficient and variance 
+  partition coefficients from multilevel models.
 License: GPL-3
 Encoding: UTF-8
 Imports:
